--- a/acaraje.html
+++ b/acaraje.html
@@ -12,7 +12,7 @@
             padding: 20px;
         }
         header {
-            background-color: #333;
+            background-color: #af4619;
             color: white;
             text-align: center;
             padding: 10px 0;
